# rc7-menu-src

./: CMakeLists.txt  README.md  build.bat
assets/: README_from_binary.txt
assets/full_dump/: manifest.txt
assets/full_dump_cpp/: RT_MANIFEST__1__lang1033.manifest
assets/full_dump_cpp/icons_built/: test
assets/full_dump_cpp/named/: test
src/: auth.cpp  auth.h  config.cpp  config.h  main.cpp  menu.cpp  menu.h  rc7_assets.rc  resource_dump.cpp  resource_ids.h  theme.cpp  theme.h
